[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/NormalMapEditor/pathLabel.gd" type="Script" id=1]
[ext_resource path="res://addons/NormalMapEditor/NormalMapDock.gd" type="Script" id=2]

[node name="NormalMap" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 34.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 253.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Texture:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 257.0
margin_right = 1016.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Label2" type="Label" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = 0.00012207
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[empty]"
valign = 1
clip_text = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sizeHbox" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 38.0
margin_right = -4.0
margin_bottom = 68.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="sizeHbox"]
margin_right = 253.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Size:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="sizeHbox"]
margin_left = 257.0
margin_right = 1016.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="sizeLabel" type="Label" parent="sizeHbox/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0 x 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 72.0
margin_right = -4.0
margin_bottom = -28.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scrollCon" type="ScrollContainer" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="bg/scrollCon"]
margin_right = 1012.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exportBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.5
margin_top = -24.0
margin_right = 26.5
margin_bottom = -4.0
mouse_filter = 1
text = "export"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="set_texture" from="HBoxContainer/Panel/Label2" to="." method="_on_Label2_set_texture"]
[connection signal="pressed" from="exportBtn" to="." method="_on_exportBtn_pressed"]
